# Deliver

./: CMakeLists.txt  README.md  build_debian.sh  build_ubuntu.sh  build_windows.sh  install.sh  install_debian.sh  install_ubuntu.sh  install_windows.bat  install_windows.sh
.github/workflows/: cmake-multi-platform.yml
include/: client.hpp  config.hpp  crypto.hpp  http_repo.hpp  local_db.hpp  logger.hpp  network.hpp  package_registry.hpp  pkg_parser.hpp  server.hpp  server_tui.hpp  tar.hpp  tui_app.hpp  types.hpp  version.hpp
pkg-example/: hello-deliver.pkg  install.sh
src/: client.cpp  client_main.cpp  config.cpp  crypto.cpp  http_repo.cpp  local_db.cpp  logger.cpp  network.cpp  package_registry.cpp  pkg_parser.cpp  server.cpp  server_main.cpp  server_tui.cpp  tar.cpp  tui_app.cpp
